--- a/KetchUPClient/app/src/main/res/layout-night/add_users.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/add_users.xml
@@ -28,18 +28,19 @@
         android:id="@+id/searchUserButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:clickable="true"
         android:outlineAmbientShadowColor="@color/dark_color"
         android:outlineSpotShadowColor="@color/dark_color"
         app:backgroundTint="@color/dark_color"
         app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textAdd"
         app:layout_constraintVertical_bias="0.01999998"
         app:maxImageSize="@dimen/_25sdp"
-        app:tint="#AAA8A8"
         app:srcCompat="@drawable/ic_user_search"
+        app:tint="#AAA8A8"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -66,7 +67,6 @@
         android:layout_marginTop="10dp"
         android:background="#B5B5B5"
         android:scaleType="center"
-        app:layout_constraintBottom_toBottomOf="@+id/backButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_mutate_background="true"
@@ -89,6 +89,7 @@
         android:id="@+id/ViewSupp"
         android:layout_width="1dp"
         android:layout_height="1dp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/userPFP"
         app:layout_constraintTop_toTopOf="@id/userPFP"
         app:layout_constraintStart_toEndOf="@id/userPFP"/>
@@ -107,41 +108,24 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
-        app:layout_constraintEnd_toStartOf="@+id/backButton"
-        app:layout_constraintStart_toEndOf="@id/ViewSupp" />
+        app:layout_constraintEnd_toEndOf="@+id/searchUserField"
+        app:layout_constraintStart_toEndOf="@id/ViewSupp"
+        app:layout_constraintTop_toTopOf="@+id/userPFP" />
 
     <TextView
         android:id="@+id/userStatus"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:ellipsize="end"
         android:fontFamily="@font/patua_one"
         android:maxLines="1"
         android:text=""
         android:textAlignment="center"
-        android:textColor="#676767"
+        android:textColor="#C8C7C7"
         android:textSize="@dimen/_10sdp"
-        app:layout_constraintEnd_toStartOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="@+id/textName"
         app:layout_constraintStart_toStartOf="@+id/textName"
         app:layout_constraintTop_toBottomOf="@+id/textName" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:contentDescription="@string/app_name"
-        android:outlineAmbientShadowColor="@color/dark_color"
-        android:outlineSpotShadowColor="@color/dark_color"
-        android:src="@drawable/ic_back"
-        app:backgroundTint="@color/dark_color"
-        app:maxImageSize="@dimen/_25sdp"
-        app:borderWidth="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textName"
-        app:layout_constraintTop_toTopOf="@id/textName"
-        app:tint="#AAA8A8" />
 
     <ProgressBar
         android:id="@+id/progressBar"
