Fixed query to load only the messages that belong to a chat and removed an unnecesary file

--- a/KetchUPClient/app/src/main/res/layout/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_screen.xml
@@ -68,10 +68,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/ic_user"
-        android:backgroundTint="#7E7E7E"
+        android:backgroundTint="#FFFFFF"
         android:outlineSpotShadowColor="@color/white"
         android:outlineAmbientShadowColor="@color/white"
         app:riv_border_width="0dp"
+        app:riv_border_color="@color/white"
         android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
